welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:8: error: '<-' expected but ';' found.
for(cpt;1 to nbPas){
       ^Program:8: error: '<-' expected but ')' found.
for(cpt;1 to nbPas){
                  ^Program:13: error: illegal start of simple expression
	}
        ^